@@ -224,8 +224,12 @@ def is_valid_ip(ip_address, project):
             return False
 
         # Check to make sure it's actually a range before
-        if '/' in addr and ipaddress.ip_address(six.text_type(ip_address)) in ipaddress.ip_network(six.text_type(addr), strict=False):
-            return False
+        try:
+            if '/' in addr and ipaddress.ip_address(six.text_type(ip_address)) in ipaddress.ip_network(six.text_type(addr), strict=False):
+                return False
+        except ValueError:
+            # Ignore invalid values here
+            pass
 
     return True
 
